<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/home_screen_holder"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/home_screen_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_screen_search_button"/>

        <Button
            android:id="@+id/home_screen_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_screen_login_button"/>

        <Button
            android:id="@+id/home_sreen_randomize_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_screen_randomize_button"/>

        <Button
            android:id="@+id/home_screen_featured_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_screen_featured_button"/>

        <Button
            android:id="@+id/home_screen_contact_us_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_screen_contact_us__button"/>

        <Button
            android:id="@+id/home_screen_about_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_screen_about_button"/>
    </LinearLayout>
</LinearLayout>